# nautilus

./: 0001-Prototype-of-Rust-support.patch
include/nautilus/: rust_test.h
rust_bindings/: .rs  directions.txt  generate_bindings.sh  getThreadBindings.sh
rust_bindings/bindings/: README.md  acpi-x86_64_bindings.rs  backtrace_bindings.rs  barrier_bindings.rs  bindings_bindings.rs  blkdev_bindings.rs  buddy_bindings.rs  bug_bindings.rs  cachepart_bindings.rs  chardev_bindings.rs  cpu_bindings.rs  cpuid_bindings.rs  cxxglue_bindings.rs  dev_bindings.rs  doprnt_bindings.rs  elf-em_bindings.rs  elf_bindings.rs  errno_bindings.rs  fmtout_bindings.rs  fprintk_bindings.rs  fpu_bindings.rs  fs_bindings.rs  gdt_bindings.rs  getopt_bindings.rs  group_bindings.rs  group_sched_bindings.rs  hashtable_bindings.rs  idle_bindings.rs  idt_bindings.rs  instrument_bindings.rs  isocore_bindings.rs  limits_bindings.rs  list_bindings.rs  loader_bindings.rs  math_bindings.rs  mb_utils_bindings.rs  mcslock_bindings.rs  mm_bindings.rs  module_bindings.rs  msg_queue_bindings.rs  (+28 more)
src/nautilus/: dev.c  naut_string.c  thread.c
src/rust/: Report.md
src/rust/example/: Cargo.toml  Makefile  spinlock_bindings.rs
src/rust/example/.cargo/: config
src/rust/example/bindgen_script/: thread_bindings
src/rust/example/src/: NK_allocator.rs  bindings.rs  dev_bindings.rs  lib.rs  spinlock_bindings.rs  threads.rs
src/rust/example/src/threads/: thread.rs  thread_bindings.rs  thread_info.rs  thread_mod.rs
